namespaces/live.cloud-platform.service.justice.gov.uk/mike-test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "mike-test"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "cloud-platform-test"
    cloud-platform.justice.gov.uk/application: "mike test"
    cloud-platform.justice.gov.uk/owner: "Cloud Platform: cloudplatform@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/mikebell-test"
    cloud-platform.justice.gov.uk/team-name: "mikebell-test-admin-team"
    cloud-platform.justice.gov.uk/review-after: "2024-07-19"
